# edip

./: .gitignore  Cargo.toml
benches/: silicon.rs
src/: edip.rs  lib.rs
sys/: Makefile  forces-edip.c
tests/files/: si5.xyz  silicon.xyz
