# [[file:edip.note::11f0794f][11f0794f]]
[package]
name = "edip"
version = "0.0.1"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
# FIXME: remove when ready
gchemol = { version = "0.0.42", features=["adhoc"] }
vecfx = { version="0.1", features = ["nalgebra"] }
gut = {version="0.1.3", package="gchemol-gut"}

[dev-dependencies]

# workspace independent
[workspace]

[features]
# for adhoc hacking
adhoc = []
# 11f0794f ends here
