# [[file:edip.note::11f0794f][11f0794f]]
[package]
name = "edip"
version = "0.1.1"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "Environment-dependent interatomic potential (EDIP) for Silicon"
license = "GPL-3.0"
homepage = "https://github.com/ybyygu/edip"

[dependencies]
vecfx = { version="0.1", features = ["nalgebra"] }
gut = {version="0.3", package="gchemol-gut"}

[dev-dependencies]
criterion = "0.3"
# FIXME: remove when ready
gchemol = { version = "0.0.42", features=["adhoc"] }

[[bench]]
name = "silicon"
harness = false

# workspace independent
[workspace]

[features]
# for adhoc hacking
adhoc = []
# 11f0794f ends here
